minor README edit

--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-CS 228 Spring 2021
+##CS 228 Spring 2021
 
 This is a repo to work through the textbook for the course. Readme will continue to be updated.
-
